# AWorld

./: .gitignore  .gitmodules  404.html  AGENTS.md  CLAUDE.md  CLEANUP_LOG.md  Dockerfile_gaia  Dockerfile_ray  EXEC_SUMMARY.md  FINAL_TEST_SUMMARY.md  PR_HYBRID_IMPROVEMENTS.md  PR_HYBRID_MAS.md  README.md  README_env_config.md  README_zh.md  REGRESSION_TEST_REPORT.md  TEST_CLEANUP_SUMMARY.md  ai_news_today.html  ai_news_today.json  browser_agent_history3.json  conftest.py  docker-compose-ray.yml  harness_tech_insights_20260513.md  index.html  index.md  mkdocs.yml  outline.py  package-lock.json  pytest.ini  regression_test_report.md  result.json  run-web.sh  score.json  search.html  setup.py  sitemap.xml  team_implementation_analysis.md  test_default_path.py  test_simple_hierarchical.py  tmp_his.json  (+1 more)
aworld-cli/: .gitignore  README.md  Sum1To100.java  batch_example.yaml  pyproject.toml  requirements.txt  sum_1_to_100.js  sum_1_to_100.py  计算求和总结报告.md
aworld-cli/data/: amni_context.db
aworld-cli/data/agent_registry/search_reasoning_agent/: search_reasoning_agent.md
aworld-cli/data/agent_registry/search_reasoning_agent_mcp_config/: search_reasoning_agent_mcp_config.md
aworld-cli/internal/docs/superpowers/: README.md
aworld-cli/src/aworld_cli/: README.md  __init__.py  _path_bootstrap.py  console.py  eval_target.py  evaluator_rendering.py  evaluator_runtime.py  evaluator_workspace.py  gateway_cli.py  history.py  main.py  runtime_bootstrap.py  status_text.py  user_input.py  utils.py
aworld-cli/tests/: test_agent_registry_refresh.py  test_aworld_system_prompt.py  test_session_transcript.py
(+2687 files in other folders)
