[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aworld-cli"
version = "0.1.0"
description = "Command-line interface for AWorld agents"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Ant AI"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "aworld",
    "rich>=14.0.0",
    "prompt-toolkit",
    "python-dotenv>=1.0.1",
    "httpx",
    "click",
]

[project.scripts]
aworld-cli = "aworld_cli.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/aworld_cli"]

[tool.uv]
dev-dependencies = []

[tool.uv.sources]
aworld = { path = "../", editable = true }
