[project]
name = "file-system-server"
version = "0.1.0"
description = "A Model Context Protocol server for filesystem operations using FastMCP"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp",
    "pydantic>=2.11.7",
    "fastmcp~=2.11.3",
    # parse_file
    "chardet~=5.2.0",
    "openpyxl~=3.1.5",
    "pandas~=2.2.3",
    "tabulate>=0.9.0",
    "python-docx~=1.2.0",
    "python-pptx~=1.0.2",
    "pillow~=12.1.0",
    "pdf2image~=1.17.0",
]

